--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-avatar": "^4.0.0",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^5.1.0",
     "react-media": "^1.10.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
