--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "gsap": "^3.9.1",
     "modern-normalize": "^1.1.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
@@ -24,6 +25,7 @@
     "react-toastify": "^8.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.3.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
