--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.9.1",
     "modern-normalize": "^1.1.0",
     "prop-types": "^15.8.1",
+    "query-string": "^7.1.0",
     "react": "^17.0.2",
     "react-avatar": "^4.0.0",
     "react-dom": "^17.0.2",
