--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "query-string": "^7.1.0",
     "react": "^17.0.2",
     "react-avatar": "^4.0.0",
+    "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^5.1.0",
     "react-media": "^1.10.0",
