--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^5.1.0",
     "react-media": "^1.10.0",
+    "react-preloaders": "^3.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
