--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.8.1",
     "query-string": "^7.1.0",
     "react": "^17.0.2",
+    "react-activity": "^2.1.3",
     "react-avatar": "^4.0.0",
     "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
