--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,37 @@
 {
     "cSpell.words": [
+        "Август",
         "Алкоголь",
         "ввод",
+        "Воскресенье",
+        "Вторник",
+        "Декабрь",
         "дома",
         "Здоровье",
+        "Июль",
+        "Июнь",
         "Категория",
         "Коммуналка",
+        "Март",
+        "Ноябрь",
         "Образование",
+        "Октябрь",
         "Описание",
         "очистить",
+        "Понедельник",
         "Продукты",
         "Прочее",
         "Развлечения",
         "связь",
+        "Сентябрь",
         "Спорт",
+        "Среда",
         "Техника",
         "товара",
         "Транспорт",
-        "хобби"
+        "Февраль",
+        "хобби",
+        "Январь",
+        "splitted"
     ]
 }
