--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.1",
+    "recharts": "^2.1.9",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4",
