--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-activity": "^2.1.3",
     "react-avatar": "^4.0.0",
+    "react-chartjs-2": "^4.0.1",
     "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
@@ -29,6 +30,7 @@
     "recharts": "^2.1.9",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
+    "victory": "^36.2.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
