--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@fontsource/roboto": "^4.5.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -30,7 +32,6 @@
     "recharts": "^2.1.9",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
-    "victory": "^36.2.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
