--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "chart.js": "^3.7.1",
     "formik": "^2.2.9",
+    "gsap": "^3.9.1",
     "modern-normalize": "^1.1.0",
     "prop-types": "^15.8.1",
     "query-string": "^7.1.0",
