--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-activity": "^2.1.3",
         "react-avatar": "^4.0.0",
         "react-chartjs-2": "^3.0.5",
+        "react-datepicker": "^4.6.0",
         "react-day-picker": "^7.4.10",
         "react-dom": "^17.0.2",
         "react-loader-spinner": "^4.0.0",
